Fix font spacing

--- a/src/components/Header/Navs/SubNav.scss
+++ b/src/components/Header/Navs/SubNav.scss
@@ -28,9 +28,9 @@ img {
         // border-left:1px solid rgb(104,199,197);
         align-content: center;
         color: white;
-        font-size: 1.7vw;
-
-padding: 0;
+        font-size: 2.05vw;
+        padding-top: 10px;
+        letter-spacing: 1px;
 a{
     color:white;
     text-decoration: none;
